--- a/Prediction/Modèle de prediction de la perte de clientèle.ipynb
+++ b/Prediction/Modèle de prediction de la perte de clientèle.ipynb
@@ -5168,7 +5168,9 @@
   {
    "cell_type": "markdown",
    "id": "f8a750d5-6e84-4a15-bfa3-e9221102efdc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Avant l'entrainement"
    ]
@@ -5978,6 +5980,7 @@
    "cell_type": "markdown",
    "id": "df3b14ce-ca59-4236-9a90-4bb064a17744",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -8013,7 +8016,9 @@
   {
    "cell_type": "markdown",
    "id": "bbf6c5c2-66b4-46a3-a773-5057e144243e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Random Forest Classifier"
    ]
@@ -10049,7 +10054,9 @@
   {
    "cell_type": "markdown",
    "id": "9cea0e44-988a-4c5e-a059-0a64ef4fbfd7",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### XGBoost"
    ]
